<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Project"
    android:background="@drawable/bg">

    <ImageView
        android:id="@+id/thesis_logo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_centerInParent="true"
        android:background="@drawable/logo"
        android:contentDescription="@string/logo1" />

    <TextView
        android:id="@+id/thesis_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="268dp"
        android:text="@string/skam"
        android:textColor="#6699ff"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/skin_cam"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="216dp"
        android:text="@string/skin_camera1"
        android:textColor="#6699ff"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/thesis_desc"
        android:layout_width="200dp"
        android:layout_height="53dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="129dp"
        android:text="@string/classification_of_skin_disease_through_deep_learning_via_android_smartphone"
        android:textAlignment="center"
        android:textColor="#000000" />

    <Button
        android:id="@+id/btnBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="25dp"
        android:layout_toEndOf="@+id/thesis_desc"
        android:background="@android:color/transparent"
        android:text="@string/back" />

</RelativeLayout>