<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Adviser"
    android:background="@drawable/bg">

    <ImageView
        android:id="@+id/thesis_logo"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_centerInParent="true"
        android:contentDescription="@string/logo1"
        android:background="@drawable/maam"/>

    <TextView
        android:id="@+id/thesis_ad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="227dp"
        android:text="@string/adviser"
        android:textColor="#6699ff"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/thesis_adname"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="173dp"
        android:text="@string/engr_jessica_s_velasco"
        android:textAlignment="center"
        android:textColor="#000000" />

    <Button
        android:id="@+id/btnBack2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="25dp"
        android:layout_toEndOf="@+id/thesis_adname"
        android:background="@android:color/transparent"
        android:text="@string/back" />

</RelativeLayout>