<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/slide_picture"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_centerInParent="true"
        android:contentDescription="@string/wilmarpicture" />

    <TextView
        android:id="@+id/slide_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="209dp"
        android:text="@string/alberio_jean_wilmar_g"
        android:textColor="#6699ff"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/slide_profile"
        android:layout_width="200dp"
        android:layout_height="33dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="135dp"
        android:text="@string/alberio_s_profile"
        android:textAlignment="center"
        android:textColor="#000000" />

</RelativeLayout>