<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/grad"
    tools:context=".LogInScreen">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="280dp"
        android:layout_height="278dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:background="@drawable/logoo"
        android:contentDescription="@string/todo" />

    <EditText
        android:id="@+id/txtuser"
        android:layout_width="200dp"
        android:layout_height="20dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="210dp"
        android:background="#11000000"
        android:drawableStart="@drawable/user"
        android:ems="10"
        android:hint="@string/username"
        android:fontFamily="@font/manifesto"
        android:inputType="textPersonName"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/txtpass"
        android:layout_width="200dp"
        android:layout_height="20dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="168dp"
        android:background="#11000000"
        android:drawableStart="@drawable/pass"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPersonName"
        android:fontFamily="@font/manifesto"
        android:textSize="16sp" />

    <Button
        android:id="@+id/btnlogin"
        android:layout_width="191dp"
        android:layout_height="36dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="107dp"
        android:background="@android:color/holo_red_dark"
        android:fontFamily="@font/bebasbold"
        android:text="LOG IN"
        android:textColor="#ffffff"
        android:textSize="30dp"
        android:visibility="visible" />

    <Button
        android:id="@+id/btnwatchme"
        android:layout_width="191dp"
        android:layout_height="36dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="48dp"
        android:background="@android:color/holo_red_dark"
        android:fontFamily="@font/bebasbold"
        android:text="WATCH ME!"
        android:textColor="#ffffff"
        android:textSize="30dp"
        android:visibility="visible" />

    <TextView
        android:id="@+id/thesis_title"
        android:layout_width="wrap_content"
        android:layout_height="44dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="259dp"
        android:fontFamily="@font/manifesto"
        android:text="@string/title"
        android:textColor="#020202"
        android:textSize="33sp"
        android:textStyle="bold" />

</RelativeLayout>